--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,5 @@
 .elementor-slider .elementor-slider-item .featured-image {
-    position: relative;
-    margin-bottom: 15px !important;
+    position: relative; 
 }
 
 .elementor-slider .elementor-slider-item .featured-image .caption {
@@ -9,8 +8,8 @@
     width: 100%;
     padding: 10px 15px;
     border-radius: 0 0 3px 3px !important;
-    background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), color-stop(25%, rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.9)));
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 25%, rgba(0, 0, 0, 0.9) 100%);
+    background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), color-stop(3%, rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.9)));
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.01) 3%, rgba(0, 0, 0, 0.9) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#00000000", endColorstr="#99000000", GradientType=0);
 }
 
@@ -19,20 +18,70 @@
 }
 
 .elementor-slider .elementor-slider-item .post-item {
-    padding: 60px;
+    padding: 0;
+    margin-bottom: 0;
+}
+ 
+.swiper-wrapper { 
+    background: #000;
+}
+.elementor-slider .elementor-slider-item .featured-image {
+    position: relative;
 }
 
-.elementor-slider .elementor-slider-item.slick-center .post-item {
-    padding: 0 !important;
+.swiper-container {
+    z-index: 0 !important;
 }
 
-.elementor-slider .slick-list.draggable {
-    width: 85%;
-    margin: 0 auto;
+.elementor-slider .elementor-slider-item .featured-image img {
+    height: calc(100vh - 130px) !important; 
 }
 
-.elementor-slider.slick-slider>.slick-prev::before,
-.elementor-slider.slick-slider>.slick-next::before {
-    background: #fff;
-    border-radius: 50%;
+.elementor-slider .elementor-slider-item .featured-image .entry-title a {
+    font-weight: bold;
+    font-size: 24px;
+}
+
+.elementor-slider .elementor-slider-item .post-item .entry-content {
+    transition: all 0.2s, top 0s, left 0s, width 0s, height 0s;
+    color: #fff;
+    transition-delay: 0.1s;
+    transition: opacity 0.55s, transform 0.55s;
+    opacity: 0;
+    transform: translateY(100%);
+    height: 1px;
+ }
+
+ .elementor-slider .elementor-slider-item .post-item:hover .entry-content {
+    display: block;
+    transition: all 0.2s, top 0s, left 0s, width 0s, height 0s;
+    color: #fff;
+    transition-delay: 0.1s;
+    transition: opacity 0.55s, transform 0.55s;
+    opacity: 1;
+    transform: translateY(0);
+    height: auto;
+ }
+ .swiper-button-prev,
+ .swiper-button-next {
+    background-image: none !important;
+    width: 44px !important;
+}
+.elementor-swiper-button { 
+    top: calc(100% + 55px) !important;
+}
+.swiper-button-next {
+    right: 30px !important;
+    left: auto !important;
+}
+
+.swiper-button-prev {
+    right: 80px !important;
+    left: auto !important;
+}
+
+.elementor-swiper-button svg {
+    fill: rgb(255, 255, 255) !important; 
+    width: 40px !important;
+    height: 40px !important;
 }
